--- a/index.html
+++ b/index.html
@@ -73,6 +73,12 @@
 					<a href="#" class="button">+ Get a quote Now</a>
 				</form>
 			</div>
+			<div class="button-group ba-compare__button-group">
+        <a href="#" class="button"><i class="ba-compare__link fa fa-comments"></i></a>
+        <a href="#" class="button"><i class="ba-compare__link fa fa-envelope"></i></a>
+        <a href="#" class="button"><i class="ba-compare__link fa fa-heart"></i></a>
+
+      </div>
 		</section>
 		<section id="about" class="ba-about">
 			<div class="row column">
